# asw2526_0

./: .gitignore  README.md  docker-compose.yml  index.html  sonar-project.properties
.github/workflows/: build.yml  release-deploy.yml
docs/: README.md  index.adoc  package-lock.json  package.json
gamey/: Cargo.toml  Dockerfile  LICENSE  README.md
gamey/benches/: gamey_benchmarks.rs
gamey/src/: cli.rs  gamey_error.rs  lib.rs  main.rs
gamey/src/bot/: mod.rs  random.rs  ybot.rs  ybot_registry.rs
gamey/src/bot_server/: choose.rs  error.rs  mod.rs  state.rs  version.rs
gamey/src/core/: action.rs  coord.rs  game.rs  mod.rs  movement.rs  player.rs  player_set.rs  render_options.rs
gamey/src/notation/: mod.rs  yen.rs  ygn.rs
gamey/src/web/: mod.rs  state.rs  version.rs
gamey/tests/: bot_server_tests.rs  cli_tests.rs  core_tests.rs
users/: Dockerfile  openapi.yaml  package-lock.json  package.json  users-service.js
users/__tests__/: users-service.test.js
users/monitoring/prometheus/: prometheus.yml
webapp/: Dockerfile  E2E.md  index.html  package-lock.json  package.json  tsconfig.json
webapp/src/: App.css  App.tsx  RegisterForm.tsx
webapp/src/__tests__/: RegisterForm.test.tsx
webapp/test/e2e/features/: register.feature
webapp/test/e2e/steps/: register.steps.mjs
webapp/test/e2e/support/: setup.mjs  world.mjs
