[package]
name = "gamey"
version = "0.1.0"
edition = "2024"
readme = "./README.md"

[[bin]]
path = "src/main.rs"
name = "gamey"


[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.9"
rustyline = { version = "17.0", features = ["with-file-history"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
tempfile = "3.15"
